# poetry-machine-learning-starter

./: cookiecutter.json  readme.md
{{ cookiecutter.project_slug }}/: makefile  pyproject.toml  {{ cookiecutter.project_slug }}.ipynb
